# TP2_GPGPU

./: .gitignore  CMakeLists.txt  README.md
FBO/: CMakeLists.txt
FBO/src/: Mesh.cpp  Mesh.hpp  TextureTGA.cpp  TextureTGA.hpp  gl-utils.cpp
ImageSimple/: CMakeLists.txt
ImageSimple/src/: gl-utils.cc  gl-utils.h  main.cc  tga.cc
TransformFeedback/: CMakeLists.txt
TransformFeedback/src/: gl-utils.cc  gl-utils.h  main.cc  tga.cc
